# lotus-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.lotus  make_wasm.bat
demos/: factorial.lotus  fibo.lotus  hello_world.lotus  letter_counter.lotus  merge.lotus  palindrome.lotus  sieve.lotus
src/: bindings.cpp  lotus-lang.sln
src/ast/: ast.cpp  ast.h
src/compiler/: compiler.vcxproj
src/evaluator/: builtinFunctions.cpp  builtinFunctions.h  evaluator.cpp  evaluator.h
src/interpreter/: interpreter.vcxproj  interpreter.vcxproj.filters  main.cpp
src/interpreter/ast/: ast.cpp  ast.h
src/interpreter/evaluator/: evaluator.cpp  evaluator.h
src/interpreter/lexer/: lexer.cpp  lexer.h
src/interpreter/object/: object.cpp  object.h
src/interpreter/parser/: parser.cpp  parser.h
src/interpreter/repl/: repl.cpp  repl.h
src/interpreter/token/: token.cpp  token.h
src/lexer/: lexer.cpp  lexer.h
src/lotus-interpreter/: lotus-interpreter.vcxproj  lotus-interpreter.vcxproj.filters  main.cpp
src/lotus-interpreter/ast/: ast.cpp  ast.h
src/lotus-interpreter/evaluator/: builtinFunctions.cpp  builtinFunctions.h  evaluator.cpp  evaluator.h
src/lotus-interpreter/object/: object.cpp  object.h
src/lotus-interpreter/parser/: parser.cpp  parser.h
src/lotus-interpreter/repl/: repl.h
src/object/: object.cpp  object.h
src/parser/: parser.cpp  parser.h
src/repl/: repl.cpp  repl.h
src/token/: token.cpp  token.h
tests/ast/: ast-test.cpp
tests/demos/: demos-test.cpp  demos-test.h
tests/evaluator/: evaluator-test.cpp  evaluator-test.h
tests/interpreter-tests/: interpreter-tests.vcxproj
tests/interpreter-tests/ast/: ast-test.cpp
tests/interpreter-tests/evaluator/: evaluator-test.cpp  evaluator-test.h
tests/interpreter-tests/lexer/: lexer-test.cpp  lexer-test.h
tests/interpreter-tests/parser/: parser-test.cpp  parser-test.h
tests/lexer/: lexer-test.cpp
tests/lotus-interpreter-tests/: lotus-interpreter-tests.vcxproj
tests/lotus-interpreter-tests/evaluator/: evaluator-test.cpp  evaluator-test.h
tests/lotus-interpreter-tests/lexer/: lexer-test.cpp
tests/lotus-interpreter-tests/parser/: parser-test.cpp  parser-test.h
tests/parser/: parser-test.cpp  parser-test.h
